bad/incr_func_call_array.example_compiler_output
ERROR
[1mbad/incr_func_call_array.lat:5:7: [1;31merror: [0;1mexpression is not assignable[m
	foo()++;
	     [1;32m^[m
[1mbad/incr_func_call_array.lat:5:2: [1;34mnote: [0;1mexpression starts here[m
	foo()++;
	[1;32m^[m
